[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midos-mcp"
version = "2026.2.23"
description = "MCP Community Library — Curated knowledge, skill packs, and semantic search for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "MidOS Contributors" }
]
keywords = ["mcp", "mcp-server", "knowledge-base", "ai-tools", "ai-agents", "semantic-search", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "lancedb>=0.29.0,<0.30.0",
    "google-genai>=1.0.0",
    "pydantic>=2.12.5",
    "fastmcp>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://midos.dev"
Repository = "https://github.com/MidOSresearch/midos-mcp"
Documentation = "https://github.com/MidOSresearch/midos-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "pytest-asyncio>=0.23.0",
]
ingestion = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
]
community = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
video = [
    "yt-dlp>=2024.1.0",
    "youtube_transcript_api>=0.6.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
midos-mcp = "modules.mcp_server.midos_mcp:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "verify_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["modules", "hive_commons"]
